app navigation added

--- a/app.json
+++ b/app.json
@@ -21,10 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "utcv.expo.cucharones"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "69a35034-b65d-4147-a7c6-521006afba8d"
+      }
+    },
+    "owner": "arodoo"
   }
 }
