--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.1",
     "yup": "^1.3.3"
   },
