profile image updated in real time

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
-    "expo-image-picker": "^14.5.0",
-    "expo-media-library": "^15.6.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
