--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
-    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
@@ -22,11 +21,12 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.0.1",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
