--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "5-cucharones",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
