--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
