--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
