--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.16",
     "@rneui/base": "4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
@@ -24,6 +25,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
