--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "intl": "^1.2.5",
+    "luxon": "^3.4.4",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
